﻿Revision history for {{$dist->name}}

{{$NEXT}}

1.000000 2014-04-05T06:23:20Z
 [00 Major]
 - This release contains mostly packaging changes that will be invisible to
   CPAN users.
 - However, it may require attention for downstream non-CPAN tooling.

 [01 Version Scheme]
 - Version Scheme is shortened from a mantissa of 8 to a mantissa of 6
 - This is the primary reason for the 1.xxx release.

 [02 Tooling is MakeMaker based]
 - Tooling is now switched to ExtUtils::MakeMaker
 - instead of coercing users into installing the latest EUMM/TestMore/MB
   when not even necessary, that is now only the recommended course of
   action.

 [Dependencies::Aggregate]
 - 5.008: 204 → 207
 - 5.010: 184 → 186
 - 5.019: 168 → 167

 [Dependencies::Stats]
 - Dependencies changed since 0.04000002, see Changes.deps{,.all,.dev} for
   details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +7 ↑1 -9
 - runtime: +1 ↑1
 - test: +4 ↓1 (recommends: +4)

0.04000002 2013-11-18T07:22:31Z
 [00 Minor/Bugfix]
 - Regenerate files to try avoid a few failures
 - Use Compile::PerFile
 - Use latest Module::Build magic
 - Rewrite tests to avoid stacked operators for 5.8 compat.

 [Dependencies::Stats]
 - Dependencies changed since 0.04000001, see Changes.deps{,.all,.dev} for
   details
 - build: ↑1
 - configure: ↑1
 - develop: +43 ↑1 -1 (recommends: -1, suggests: +1 -1)
 - test: ↑1 -3

 [Documentation]
 - README.mkdn points to metacpan

0.04000001 2013-09-24T16:22:46Z
 [Bugfix]
 - Attempt to solve the problem of CPAN Smokers not having dzil in path by
   using Test::DZil instead.

 [Dependencies::Stats]
 - Dependencies changed since 0.04000000, see Changes.deps{,.all,.dev} for
   details
 - test: +3 -1

 [Tests]
 - additional test for new ::Role::Bootstrap behaviour
 - update compile test

0.04000000 2013-09-05T08:17:38Z
 [!Major and API breaking Changes]
 - no_fallback deprecated in favour of fallback = 0/1
 - reimplemented in terms of a proper Moose class and ::Role::Bootstrap
