@@ -2,16 +2,15 @@ use strict;
 use warnings;
 
 use Test::More;
-use Path::FindDev qw( find_dev );
+use FindBin;
 use Path::Tiny;
-use Cwd qw( cwd );
 use File::Copy::Recursive qw( rcopy );
 use Test::DZil;
 use Test::Fatal;
 
 my $dist = 'fake_dist_05';
 
-my $source  = find_dev('./')->child('corpus')->child($dist);
+my $source  = path("$FindBin::Bin")->parent->child('corpus')->child($dist);
 my $tempdir = Path::Tiny->tempdir;
 
 rcopy( "$source", "$tempdir" );
