@@ -1,6 +1,13 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [00 Test Fixes]
+ - Drop dependency on Path::FindDev
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.000000, see Changes.deps{,.all,.dev} for
+   details
+ - test: +1 -1
 
 1.000000 2014-04-05T06:23:20Z
  [00 Major]
